# cire

./: .gitignore  CHANGES  CREDITS  HACKING  INSTALL  Makefile.am  README  TODO  autogen.sh  configure.ac  cvs2cl.pl
src/: Makefile.am  diary.c  diary.h  entry.c  entry.h  gtk_ui_callbacks.c  gtk_ui_callbacks.h  gtk_ui_main.c  gtk_ui_main.h  gtk_ui_other.c  gtk_ui_other.h  main.c  main.h  misc.c  misc.h  ncurses_ui.c  ncurses_ui.h  prefs.c  prefs.h  text_ui.c  text_ui.h
