# ***************************************
# Cire: An Open-Source Diary Program in C
#
# Copyright (C) 2004, Andrew Morritt, <andymorritt@rogers.com>, et al.
#
# This software is licensed as described in the file COPYING, which
# you should have received as part of this distribution. The terms
# are also available at http://cire.sourceforge.net/license.php
#
# You may opt to use, copy, modify, merge, publish, distribute and/or sell
# copies of the Software, and permit persons to whom the Software is
# furnished to do so, under the terms of the COPYING file.
#
# This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
# KIND, either express or implied.
#
# File is a General Cire File. Anyone may commit changes.
#
# $Id: Makefile.am,v 1.2 2004/10/14 15:19:07 andrewm1 Exp $
# ***************************************



bin_PROGRAMS = cire

cire_SOURCES = diary.c \
               diary.h \
               entry.c \
               entry.h \
               gtk_ui_callbacks.c \
               gtk_ui_callbacks.h \
               gtk_ui_main.c \
               gtk_ui_main.h \
               gtk_ui_other.c \
               gtk_ui_other.h \
               main.c \
               main.h \
               misc.c \
               misc.h \
               ncurses_ui.c \
               ncurses_ui.h \
               prefs.c \
               prefs.h \
               text_ui.c \
               text_ui.h
